--- a/Quizzler-iOS13/Base.lproj/Main.storyboard
+++ b/Quizzler-iOS13/Base.lproj/Main.storyboard
@@ -38,6 +38,7 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="True" backgroundImage="Rectangle">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -52,6 +53,7 @@
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <inset key="titleEdgeInsets" minX="20" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <state key="normal" title="False" backgroundImage="Rectangle">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         </state>
@@ -88,7 +90,7 @@
                         <outlet property="falseButton" destination="tbn-vQ-GyC" id="oLt-xG-tDQ"/>
                         <outlet property="progressBar" destination="TXm-qh-7Xg" id="TUP-1c-c0O"/>
                         <outlet property="questionLabel" destination="rSI-li-mhO" id="huS-qW-cHd"/>
-                        <outlet property="trueButton" destination="tbn-vQ-GyC" id="GfQ-vW-kDw"/>
+                        <outlet property="trueButton" destination="oVw-Hl-IRe" id="7Mh-JG-KWo"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
